<resources>
    <string name="app_name">Air Monitor</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="dew_point">Dew Point</string>
    <string name="date_time">DATE/TIME</string>
    <string name="temp">TEMP</string>
    <string name="humidity_cap">HUMIDITY</string>
    <string name="pressure_cap">PRESSURE</string>
    <string name="dew_point_cap">DEW POINT</string>
    <string name="no_data">No Data</string>
    <string name="temperature">Temperature</string>
    <string name="preference_file_name">App Preferences</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="visualizations">Visualizations</string>
    <string name="temp_and_humidity_correlation">Temperature and Humidity Correlation</string>
    <string name="histograms_for_aqi_temperature_humidity_dew_point_pressure">Histograms for Temperature, Humidity, Pressure, Air Quality and Dew Point</string>
    <string name="temperature_3d_bar_chart">Temperature 3D Bar Chart</string>
    <string name="show_visualizations">Show Visualizations</string>
    <string name="_3_day_temperature_comparison">3 Day Temperature Comparison</string>
</resources>