<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:weightSum="6">

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:text="@string/date_time"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/humidityValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:text="@string/humidity_cap"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/pressureValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:text="@string/pressure_cap"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/dewPointValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:text="@string/dew_point_cap"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>