<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".ShowDataActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="15dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/txtItemValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:text="@string/date_time"
            android:gravity="center"
            android:background="@drawable/bg_border"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/temp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_border"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txtHumidity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/humidity_cap"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_border"
            android:padding="5dp" />

        <TextView
            android:id="@+id/txtPressure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/pressure_cap"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_border"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txtDewPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/dew_point_cap"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_border"
            android:padding="5dp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/list_item_data"/>

        <TextView
            android:id="@+id/txtNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="?attr/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </RelativeLayout>




</LinearLayout>