<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_color"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Air Pollution Monitor"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="25sp"/>


        <ImageButton
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_menu_24"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.ekn.gruzer.gaugelibrary.HalfGauge
        android:id="@+id/halfGauge"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Air Quality is Good"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/halfGauge"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_tag_faces_24"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtMessage"/>

    <ScrollView
        android:id="@+id/categoryCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/icon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="#fafafa"
                    android:background="@drawable/bg_border"
                    app:cardCornerRadius="10dp"
                    android:padding="5dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/hot"/>

                        <TextView
                            android:id="@+id/temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingHorizontal="14dp"
                            android:text="0"
                            android:textSize="20sp"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/temperature"
                            android:paddingHorizontal="15dp"
                            android:textSize="12sp"
                            android:background="@drawable/bg_border"
                            android:textColor="#999999"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="#fafafa"
                    android:background="@drawable/bg_border"
                    app:cardCornerRadius="10dp"
                    android:padding="5dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/humidity"/>

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingHorizontal="14dp"
                            android:text="0"
                            android:textSize="20sp"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/humidity"
                            android:paddingHorizontal="15dp"
                            android:textSize="12sp"
                            android:background="@drawable/bg_border"
                            android:textColor="#999999"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="#fafafa"
                    android:background="@drawable/bg_border"
                    app:cardCornerRadius="10dp"
                    android:padding="5dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/pressure"/>

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingHorizontal="14dp"
                            android:text="0"
                            android:textSize="20sp"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/pressure"
                            android:paddingHorizontal="15dp"
                            android:textSize="12sp"
                            android:background="@drawable/bg_border"
                            android:textColor="#999999"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="#fafafa"
                    android:background="@drawable/bg_border"
                    app:cardCornerRadius="10dp"
                    android:padding="5dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/dew_point"/>

                        <TextView
                            android:id="@+id/dewPoint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingHorizontal="14dp"
                            android:text="0"
                            android:textSize="20sp"
                            android:textColor="#000"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/dew_point"
                            android:paddingHorizontal="15dp"
                            android:textSize="12sp"
                            android:background="@drawable/bg_border"
                            android:textColor="#999999"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>